# validation-electronique

./: .gitignore  ARCHITECTURE_vérifier par prof.md  CMakeLists.txt  README.md  desktop.ini  esp32_control_panel_fixed.html  platformio.ini  procedure_test_carte.md  sdkconfig.esp32pico  sdkconfig.esp32pico.old
Validation Electronique all V1/30_src/components/low/: CMakeLists.txt
Validation Electronique all V1/30_src/components/low/hal/adc/: drv_adc.cpp
Validation Electronique all V1/30_src/components/low/hal/adc/include/: drv_adc.hpp
Validation Electronique all V1/30_src/components/low/hal/i2c/: drv_i2c.cpp
Validation Electronique all V1/30_src/components/low/hal/i2c/include/: drv_i2c.hpp
Validation Electronique all V1/30_src/components/low/hal/sensors/: drv_ina237.cpp  drv_temp_sensor.cpp
Validation Electronique all V1/30_src/components/low/hal/sensors/include/: drv_ina237.hpp  drv_temp_sensor.hpp
Validation Electronique all V1/30_src/components/low/hal/uart/: drv_uart.cpp
Validation Electronique all V1/30_src/components/low/hal/uart/include/: drv_uart.hpp
Validation Electronique all V1/30_src/components/low/memory/: flash_storage.cpp
Validation Electronique all V1/30_src/components/low/memory/include/: flash_storage.hpp
Validation Electronique all V2/30_src/components/low/: CMakeLists.txt
Validation Electronique all V2/30_src/components/low/hal/sensors/: drv_temp_sensor.cpp
Validation Electronique all V2/30_src/components/low/memory/: psram_manager.cpp
Validation Electronique all V2/30_src/components/low/memory/include/: ring_buffer.hpp
(+128 files in other folders)
